<resources>
    <string name="app_name">SocialApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Signup Screen -->
    <string name="signup_title">Create your account</string>
    <string name="signup_subtitle">Join us and start your journey today.</string>

    <string name="label_full_name">Full Name</string>
    <string name="hint_full_name">John Doe</string>

    <string name="label_email">Email</string>
    <string name="hint_email">name@example.com</string>

    <string name="label_password">Password</string>
    <string name="hint_password">••••••••</string>

    <string name="action_sign_up">Sign Up</string>
    <string name="action_login_prompt">Already have an account? Log in</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="apple_sign_in">Sign in with Apple</string>

    <!--    Login-->
    <string name="login_title">Welcome back</string>
    <string name="login_subtitle">Sign in to continue.</string>

    <string name="action_login">Log In</string>
    <string name="action_signup_prompt">Don’t have an account? Sign up</string>
</resources>